--- a/zyx-config/src/main/resources/config.properties
+++ b/zyx-config/src/main/resources/config.properties
@@ -23,7 +23,7 @@
 #
 
 ## JDBC set
-jdbc.url=jdbc\:mysql\://119.61.66.55\:3306/zyx?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url=jdbc\:mysql\://119.61.66.55\:3306/zyx2.0?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username=tiyujia
 ## wusc.321
 jdbc.password=tiyujia_2016
