[add] 货币模块  货币添加和货币操作记录实现

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>zyx-constants</module>
         <module>zyx-vo</module>
         <module>zyx-param</module>
+        <module>zyx-dubbo-coin</module>
     </modules>
 
     <properties>
