--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>zyx-vo</module>
         <module>zyx-param</module>
         <module>zyx-dubbo-coin</module>
+        <module>zyx-dubbo-activity</module>
     </modules>
 
     <properties>
