--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,20 @@
         <module>zyx-entity</module>
         <module>zyx-core</module>
         <module>zyx-utils</module>
+        <module>zyx-dubbo-user</module>
+        <module>zyx-dubbo-activity</module>
+        <!--<module>zyx-rpc-shop</module>-->
+        <!--<module>zyx-dubbo-pg</module>-->
+        <!--<module>zyx-dubbo-live</module>-->
         <module>zyx-constants</module>
         <module>zyx-vo</module>
+        <!--<module>zyx-dubbo-system</module>-->
+        <!--<module>zyx-dubbo-task-scheduler</module>-->
+        <!--<module>zyx-dubbo-attention</module>-->
         <module>zyx-param</module>
-        <module>zyx-dubbo-activity</module>
+        <!--<module>zyx-dubbo-collection</module>-->
+        <!--<module>zyx-exception</module>-->
+        <module>zyx-dubbo-point</module>
     </modules>
 
     <properties>
