【add modify】1.货币限定次数 个数功能2.用户货币信息查询功能3.去除Mapper测试文件影响4.暂去parent pom中point modulse 未提交实际代码报错 5.数据库Mapper扫描路径增加

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,8 @@
         <module>zyx-param</module>
         <!--<module>zyx-dubbo-collection</module>-->
         <!--<module>zyx-exception</module>-->
-        <module>zyx-dubbo-point</module>
+        <!--<module>zyx-dubbo-point</module>-->
+        <module>zyx-dubbo-coin</module>
     </modules>
 
     <properties>
