--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <module>zyx-param</module>
         <!--<module>zyx-dubbo-collection</module>-->
         <!--<module>zyx-exception</module>-->
-        <!--<module>zyx-dubbo-point</module>-->
+        <module>zyx-dubbo-point</module>
         <module>zyx-dubbo-coin</module>
     </modules>
 
