--- a/zyx-config/pom.xml
+++ b/zyx-config/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.2</version>
         </dependency>-->
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-mapper</artifactId>
+            <version>${zyx.mapper.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
