--- a/zyx-dubbo-user/pom.xml
+++ b/zyx-dubbo-user/pom.xml
@@ -12,6 +12,45 @@
     <artifactId>zyx-dubbo-user</artifactId>
 
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-param</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-vo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-constants</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-services</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
