--- a/zyx-vo-2.0/pom.xml
+++ b/zyx-vo-2.0/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>tiyujia-parent</groupId>
+    <groupId>tiyujia-parent-2</groupId>
     <artifactId>zyx-parent-2.0</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>2.0</version>
   </parent>
   <artifactId>zyx-vo-2.0</artifactId>
   <name>zyx-vo-2.0</name>
@@ -15,13 +15,13 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>tiyujia-parent</groupId>
-      <artifactId>zyx-common</artifactId>
+      <groupId>tiyujia-parent-2</groupId>
+      <artifactId>zyx-common-2.0</artifactId>
       <version>${zyx.common.version}</version>
     </dependency>
     <dependency>
-      <groupId>tiyujia-parent</groupId>
-      <artifactId>zyx-entity</artifactId>
+      <groupId>tiyujia-parent-2</groupId>
+      <artifactId>zyx-entity-2.0</artifactId>
       <version>${zyx.entity.version}</version>
     </dependency>
   </dependencies>
