--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>tiyujia-parent</groupId>
+    <groupId>tiyujia-parent-2</groupId>
     <artifactId>zyx-parent-2.0</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>pom</packaging>
     <description>zyx-parent-2.0</description>
     <modules>
@@ -33,20 +33,20 @@
     </modules>
 
     <properties>
-        <zyx.common.version>0.0.2-SNAPSHOT</zyx.common.version>
-        <zyx.config.version>0.0.2-SNAPSHOT</zyx.config.version>
-        <zyx.core.version>0.0.2-SNAPSHOT</zyx.core.version>
+        <zyx.common.version>2.0</zyx.common.version>
+        <zyx.config.version>2.0</zyx.config.version>
+        <zyx.core.version>2.0</zyx.core.version>
         <!--<zyx.dao.version>0.0.1-SNAPSHOT</zyx.dao.version>-->
-        <zyx.file.version>0.0.2-SNAPSHOT</zyx.file.version>
-        <zyx.entity.version>0.0.2-SNAPSHOT</zyx.entity.version>
-        <zyx.services.version>0.0.2-SNAPSHOT</zyx.services.version>
-        <zyx.user.version>0.0.2-SNAPSHOT</zyx.user.version>
-        <zyx.activity.version>0.0.2-SNAPSHOT</zyx.activity.version>
-        <zyx.mapper.version>0.0.2-SNAPSHOT</zyx.mapper.version>
-        <zyx.constants.version>0.0.2-SNAPSHOT</zyx.constants.version>
-        <zyx.utils.version>0.0.2-SNAPSHOT</zyx.utils.version>
-        <zyx.vo.version>0.0.2-SNAPSHOT</zyx.vo.version>
-        <!--<zyx.param.version>0.0.2-SNAPSHOT</zyx.param.version>-->
+        <zyx.file.version>2.0</zyx.file.version>
+        <zyx.entity.version>2.0</zyx.entity.version>
+        <zyx.services.version>2.0</zyx.services.version>
+        <zyx.user.version>2.0</zyx.user.version>
+        <zyx.activity.version>2.0</zyx.activity.version>
+        <zyx.mapper.version>2.0</zyx.mapper.version>
+        <zyx.constants.version>2.0</zyx.constants.version>
+        <zyx.utils.version>2.0</zyx.utils.version>
+        <zyx.vo.version>2.0</zyx.vo.version>
+        <zyx.param.version>2.0</zyx.param.version>
         <!-- facade projects -->
         <!-- 移动端接口 -->
         <!--<mobileservice.version>0.0.1-SNAPSHOT</mobileservice.version>-->
