--- a/zyx-config-2.0/pom.xml
+++ b/zyx-config-2.0/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>tiyujia-parent</groupId>
+        <groupId>tiyujia-parent-2</groupId>
         <artifactId>zyx-parent-2.0</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zyx-config-2.0</artifactId>
@@ -46,8 +46,8 @@
             <version>1.9.2</version>
         </dependency>-->
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-mapper</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-mapper-2.0</artifactId>
             <version>${zyx.mapper.version}</version>
         </dependency>
     </dependencies>
