--- a/zyx-core-2.0/pom.xml
+++ b/zyx-core-2.0/pom.xml
@@ -4,35 +4,35 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>tiyujia-parent</groupId>
+        <groupId>tiyujia-parent-2</groupId>
         <artifactId>zyx-parent-2.0</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <artifactId>zyx-core-2.0</artifactId>
     <dependencies>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-common</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-common-2.0</artifactId>
             <version>${zyx.common.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-constants</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-constants-2.0</artifactId>
             <version>${zyx.constants.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-config</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-config-2.0</artifactId>
             <version>${zyx.config.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-entity</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-entity-2.0</artifactId>
             <version>${zyx.entity.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-services</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-services-2.0</artifactId>
             <version>${zyx.services.version}</version>
         </dependency>
 
