--- a/zyx-dubbo-coin-2.0/pom.xml
+++ b/zyx-dubbo-coin-2.0/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>zyx-parent-2.0</artifactId>
-        <groupId>tiyujia-parent</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <groupId>tiyujia-parent-2</groupId>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zyx-dubbo-coin-2.0</artifactId>
@@ -16,35 +16,35 @@
 
     <dependencies>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-common</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-common-2.0</artifactId>
             <version>${zyx.common.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-config</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-config-2.0</artifactId>
             <version>${zyx.config.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-core</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-core-2.0</artifactId>
             <version>${zyx.core.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-file</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-file-2.0</artifactId>
             <version>${zyx.file.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-services</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-services-2.0</artifactId>
             <version>${zyx.services.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-vo</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-vo-2.0</artifactId>
             <version>${zyx.services.version}</version>
         </dependency>
         <dependency>
