--- a/zyx-entity-2.0/pom.xml
+++ b/zyx-entity-2.0/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>tiyujia-parent</groupId>
+        <groupId>tiyujia-parent-2</groupId>
         <artifactId>zyx-parent-2.0</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <artifactId>zyx-entity-2.0</artifactId>
     <dependencies>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-common</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-common-2.0</artifactId>
             <version>${zyx.common.version}</version>
         </dependency>
 
