--- a/zyx-file-2.0/pom.xml
+++ b/zyx-file-2.0/pom.xml
@@ -3,11 +3,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>tiyujia-parent</groupId>
+    <groupId>tiyujia-parent-2</groupId>
     <artifactId>zyx-parent-2.0</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>2.0</version>
   </parent>
-  <groupId>tiyujia-parent</groupId>
+  <groupId>tiyujia-parent-2</groupId>
   <artifactId>zyx-file-2.0</artifactId>
   <name>zyx-file-2.0</name>
   <url>http://maven.apache.org</url>
