--- a/zyx-mapper-2.0/pom.xml
+++ b/zyx-mapper-2.0/pom.xml
@@ -3,21 +3,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
-		<groupId>tiyujia-parent</groupId>
+		<groupId>tiyujia-parent-2</groupId>
 		<artifactId>zyx-parent-2.0</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>zyx-mapper-2.0</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>tiyujia-parent</groupId>
-			<artifactId>zyx-entity</artifactId>
+			<groupId>tiyujia-parent-2</groupId>
+			<artifactId>zyx-entity-2.0</artifactId>
 			<version>${zyx.entity.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>tiyujia-parent</groupId>
-			<artifactId>zyx-vo</artifactId>
+			<groupId>tiyujia-parent-2</groupId>
+			<artifactId>zyx-vo-2.0</artifactId>
 			<version>${zyx.vo.version}</version>
 		</dependency>
     <dependency>
@@ -175,9 +175,9 @@
 			<version>${mapper.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>tiyujia-parent</groupId>
-			<artifactId>zyx-param</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>tiyujia-parent-2</groupId>
+			<artifactId>zyx-param-2.0</artifactId>
+			<version>${zyx.param.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
