--- a/zyx-services-2.0/pom.xml
+++ b/zyx-services-2.0/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>tiyujia-parent</groupId>
+        <groupId>tiyujia-parent-2</groupId>
         <artifactId>zyx-parent-2.0</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zyx-services-2.0</artifactId>
@@ -12,36 +12,36 @@
         <!-- <dependency> <groupId>tiyujia-parent</groupId> <artifactId>zyx-dao</artifactId>
             <version>${zyx.dao.version}</version> </dependency> -->
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-constants</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-constants-2.0</artifactId>
             <version>${zyx.constants.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-mapper</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-mapper-2.0</artifactId>
             <version>${zyx.mapper.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-config</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-config-2.0</artifactId>
             <version>${zyx.config.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-entity</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-entity-2.0</artifactId>
             <version>${zyx.entity.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-vo</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-vo-2.0</artifactId>
             <version>${zyx.vo.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-utils</artifactId>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-utils-2.0</artifactId>
             <version>${zyx.utils.version}</version>
         </dependency>
 
@@ -208,9 +208,9 @@
             <artifactId>jedis</artifactId>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-param</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-param-2.0</artifactId>
+            <version>${zyx.param.version}</version>
         </dependency>
 
 
