--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <!--<module>zyx-exception</module>-->
         <module>zyx-dubbo-point</module>
         <module>zyx-dubbo-coin</module>
+        <module>zyx-dubbo-account</module>
     </modules>
 
     <properties>
