[modify]我的关注模块，关注模块

--- a/zyx-config/src/main/resources/SMS.properties
+++ b/zyx-config/src/main/resources/SMS.properties
@@ -1,5 +1,5 @@
 #sms.id=${sms.id}
-#sms.account=${sms.account}
+#sms.user=${sms.user}
 #sms.password=${sms.password}
 #sms.sendType=${sms.sendType}
 #sms.PostFixNumber=${sms.PostFixNumber}
