--- a/zyx-dubbo-user/pom.xml
+++ b/zyx-dubbo-user/pom.xml
@@ -317,6 +317,11 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>tiyujia-parent-2</groupId>
+            <artifactId>zyx-dubbo-account</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
