[add] 添加system模块   添加热门城市查询功能

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>zyx-dubbo-coin</module>
         <module>zyx-dubbo-record</module>
         <module>zyx-dubbo-account</module>
+        <module>zyx-dubbo-system</module>
     </modules>
 
     <properties>
