【add】 场馆模块  删除原运动记录模块内场馆管理

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>zyx-dubbo-record</module>
         <module>zyx-dubbo-account</module>
         <module>zyx-dubbo-system</module>
+        <module>zyx-dubbo-venue</module>
     </modules>
 
     <properties>
