【modify】 zoom build 文件修改为与module 一致

--- a/zyx-dubbo-zoom/pom.xml
+++ b/zyx-dubbo-zoom/pom.xml
@@ -301,7 +301,7 @@
 
 	</dependencies>
     <build>
-		<finalName>zyx-dubbo-pg</finalName>
+		<finalName>zyx-dubbo-zoom</finalName>
 		<resources>
 			<resource>
 				<targetPath>${project.build.directory}/classes</targetPath>
