--- a/zyx-config/pom.xml
+++ b/zyx-config/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>tiyujia-parent-2</groupId>
+        <groupId>tiyujia-parent</groupId>
         <artifactId>zyx-parent</artifactId>
         <version>2.0</version>
     </parent>
@@ -11,7 +11,7 @@
     <artifactId>zyx-config</artifactId>
     <dependencies>
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-mapper</artifactId>
             <version>${zyx.mapper.version}</version>
         </dependency>
