--- a/zyx-constants/pom.xml
+++ b/zyx-constants/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>zyx-parent</artifactId>
-        <groupId>tiyujia-parent-2</groupId>
+        <groupId>tiyujia-parent</groupId>
         <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
