--- a/zyx-dubbo-coin/pom.xml
+++ b/zyx-dubbo-coin/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>zyx-parent</artifactId>
-        <groupId>tiyujia-parent-2</groupId>
+        <groupId>tiyujia-parent</groupId>
         <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -16,34 +16,34 @@
 
     <dependencies>
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-common</artifactId>
             <version>${zyx.common.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-config</artifactId>
             <version>${zyx.config.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-core</artifactId>
             <version>${zyx.core.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-file</artifactId>
             <version>${zyx.file.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-services</artifactId>
             <version>${zyx.services.version}</version>
         </dependency>
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-vo</artifactId>
             <version>${zyx.services.version}</version>
         </dependency>
