--- a/zyx-entity/pom.xml
+++ b/zyx-entity/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>tiyujia-parent-2</groupId>
+        <groupId>tiyujia-parent</groupId>
         <artifactId>zyx-parent</artifactId>
         <version>2.0</version>
     </parent>
     <artifactId>zyx-entity</artifactId>
     <dependencies>
         <dependency>
-            <groupId>tiyujia-parent-2</groupId>
+            <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-common</artifactId>
             <version>${zyx.common.version}</version>
         </dependency>
