--- a/zyx-mapper/pom.xml
+++ b/zyx-mapper/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<parent>
-		<groupId>tiyujia-parent-2</groupId>
+		<groupId>tiyujia-parent</groupId>
 		<artifactId>zyx-parent</artifactId>
 		<version>2.0</version>
 	</parent>
@@ -11,17 +11,17 @@
 	<artifactId>zyx-mapper</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>tiyujia-parent-2</groupId>
+			<groupId>tiyujia-parent</groupId>
 			<artifactId>zyx-entity</artifactId>
 			<version>${zyx.entity.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>tiyujia-parent-2</groupId>
+			<groupId>tiyujia-parent</groupId>
 			<artifactId>zyx-vo</artifactId>
 			<version>${zyx.vo.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>tiyujia-parent-2</groupId>
+			<groupId>tiyujia-parent</groupId>
 			<artifactId>zyx-param</artifactId>
 			<version>${zyx.param.version}</version>
 		</dependency>
