--- a/zyx-vo/pom.xml
+++ b/zyx-vo/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>tiyujia-parent-2</groupId>
+    <groupId>tiyujia-parent</groupId>
     <artifactId>zyx-parent</artifactId>
     <version>2.0</version>
   </parent>
@@ -14,12 +14,12 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>tiyujia-parent-2</groupId>
+      <groupId>tiyujia-parent</groupId>
       <artifactId>zyx-common</artifactId>
       <version>${zyx.common.version}</version>
     </dependency>
     <dependency>
-      <groupId>tiyujia-parent-2</groupId>
+      <groupId>tiyujia-parent</groupId>
       <artifactId>zyx-entity</artifactId>
       <version>${zyx.entity.version}</version>
     </dependency>
