--- a/zyx-config/src/main/resources/CLMSG.properties
+++ b/zyx-config/src/main/resources/CLMSG.properties
@@ -1,4 +1,5 @@
-CLMSG.URL=http://222.73.117.158/msg/HttpBatchSendSM
+#CLMSG.URL=http://222.73.117.158/msg/HttpBatchSendSM
+CLMSG.URL=http://sapi.253.com/msg/HttpBatchSendSM
 CLMSG.ACCOUNT=CDzyx888
 CLMSG.PSWD=CDZYX_2016
 CLMSG.NEEDSTATUS=true
