--- a/zyx-dubbo-user/pom.xml
+++ b/zyx-dubbo-user/pom.xml
@@ -312,11 +312,11 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
-        <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-dubbo-account</artifactId>
-            <version>2.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>tiyujia-parent</groupId>-->
+            <!--<artifactId>zyx-dubbo-account</artifactId>-->
+            <!--<version>2.0</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
