--- a/zyx-config/src/main/resources/jdbc.properties
+++ b/zyx-config/src/main/resources/jdbc.properties
@@ -2,5 +2,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.1.200:3306/zyx2.0?characterEncoding=UTF-8&amp;autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull&amp;transformedBitIsBoolean=true&amp;useUnicode=true
 jdbc.username=tiyujia
-## wusc.321
 jdbc.password=tiyujia_2016
+jdbc.validationQuery=SELECT 1
