【add】 运动币获取方式加入

--- a/zyx-dubbo-activity/pom.xml
+++ b/zyx-dubbo-activity/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>zyx-dubbo-activity</artifactId>
     <dependencies>
+
+        <dependency>
+            <groupId>tiyujia-parent</groupId>
+            <artifactId>zyx-constants</artifactId>
+            <version>${zyx.constants.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>antlr</groupId>
             <artifactId>antlr</artifactId>
