--- a/zyx-dubbo-record/src/main/resources/service.properties
+++ b/zyx-dubbo-record/src/main/resources/service.properties
@@ -1,6 +1,6 @@
 ###dubbo
 dubbo.registry.address=119.61.66.55:2181
-## JDBC set
+######################### JDBC settings ########################
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.1.200:3306/zyx2.0?characterEncoding=UTF-8&amp;autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull&amp;transformedBitIsBoolean=true&amp;useUnicode=true
 jdbc.username=tiyujia
@@ -10,24 +10,25 @@ jdbc.initialSize=10
 jdbc.minIdle=10
 jdbc.maxActive=20
 
-# Redis settings
-redis.host=192.168.1.200
-redis.port=6379
-redis.pass=
-redis.default.db=0
-redis.timeout=100000
-redis.maxTotal=300
-redis.maxIdle=100
-redis.maxWaitMillis=1000
-redis.testOnBorrow=true
+######################### Redis settings ########################
+#redis.host=192.168.1.200
+#redis.port=6379
+#redis.pass=
+#redis.default.db=0
+#redis.timeout=100000
+#redis.maxTotal=300
+#redis.maxIdle=100
+#redis.maxWaitMillis=1000
+#redis.testOnBorrow=true
 
-sms.id=995836
-sms.account=admin
-sms.password=1JKY7K
-sms.sendType=1
-sms.PostFixNumber=
+########################## SMS Settings #####################
+#sms.id=995836
+#sms.account=admin
+#sms.password=1JKY7K
+#sms.sendType=1
+#sms.PostFixNumber=
 
-
+######################## CLMSG Settings ########################
 CLMSG.URL=http://sapi.253.com/msg/HttpBatchSendSM
 CLMSG.ACCOUNT=CDzyx888
 CLMSG.PSWD=CDZYX_2016
