--- a/zyx-services/pom.xml
+++ b/zyx-services/pom.xml
@@ -23,11 +23,11 @@
             <version>${zyx.mapper.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-config</artifactId>
-            <version>${zyx.config.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>tiyujia-parent</groupId>-->
+            <!--<artifactId>zyx-config</artifactId>-->
+            <!--<version>${zyx.config.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>tiyujia-parent</groupId>
