【modify】 配置文件结构修改  启动类统一位置命名 数据库连接数配置 初始先配置为 5 5 20 后续根据实际情况调整对应模块配置

--- a/zyx-dubbo-zoom/pom.xml
+++ b/zyx-dubbo-zoom/pom.xml
@@ -34,11 +34,11 @@
 			<artifactId>zyx-services</artifactId>
 			<version>${zyx.services.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>tiyujia-parent</groupId>
-			<artifactId>zyx-config</artifactId>
-			<version>${zyx.config.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>tiyujia-parent</groupId>-->
+			<!--<artifactId>zyx-config</artifactId>-->
+			<!--<version>${zyx.config.version}</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>tiyujia-parent</groupId>
