--- a/zyx-dubbo-account/pom.xml
+++ b/zyx-dubbo-account/pom.xml
@@ -27,11 +27,11 @@
             <artifactId>zyx-entity</artifactId>
             <version>${zyx.entity.version}</version>
         </dependency>
-        <dependency>
-            <groupId>tiyujia-parent</groupId>
-            <artifactId>zyx-config</artifactId>
-            <version>${zyx.config.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>tiyujia-parent</groupId>-->
+            <!--<artifactId>zyx-config</artifactId>-->
+            <!--<version>${zyx.config.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>tiyujia-parent</groupId>
             <artifactId>zyx-entity</artifactId>
