--- a/zyx-dubbo-record/src/main/resources/log4j.properties
+++ b/zyx-dubbo-record/src/main/resources/log4j.properties
@@ -1,13 +1,13 @@
 #开发日志将在本地输出，并输出SQL
 
-log4j.rootLogger=INFO,A1,DRF
+log4j.rootLogger=ERROR,A1,DRF
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # log4j.appender.A1.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
 log4j.appender.A1.layout.ConversionPattern=%d %5p [%F:%L] : %m%n
 
 log4j.appender.DRF=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DRF.Threshold=INFO
+log4j.appender.DRF.Threshold=ERROR
 log4j.appender.DRF.DatePattern='.'yyyy-MM-dd
 log4j.appender.DRF.File=logs/rc-web-boss.log
 log4j.appender.DRF.Append=true
@@ -16,27 +16,27 @@ log4j.appender.DRF.layout.ConversionPattern=[%-5p][%d{yyyyMMdd HH:mm:ss,SSS}][%C
 
 
 ###输出SQL
-log4j.logger.com.ibatis=INFO
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=INFO
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=INFO
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=INFO
-log4j.logger.java.sql.Connection=INFO
-log4j.logger.java.sql.Statement=INFO
-log4j.logger.java.sql.PreparedStatement=INFO
+log4j.logger.com.ibatis=ERROR
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=ERROR
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=ERROR
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=ERROR
+log4j.logger.java.sql.Connection=ERROR
+log4j.logger.java.sql.Statement=ERROR
+log4j.logger.java.sql.PreparedStatement=ERROR
 
-log4j.rootCategory=info,stdout
+log4j.rootCategory=ERROR,stdout
 
 # CONSOLE appender not used by default
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c{1} %M %L - %m%n
 
-log4j.logger.org.springframework=INFO,perf
+log4j.logger.org.springframework=ERROR,perf
 
 #log4j.logger.druid.sql=info,druid
 #log4j.logger.druid.sql.DataSource=info,druid
 #log4j.logger.druid.sql.Connection=info,druid
-log4j.logger.druid.sql.Statement=debug,druid
+log4j.logger.druid.sql.Statement=ERROR,druid
 #log4j.logger.druid.sql.ResultSet=info,druid
 
 # File appender
