【modify】  运动路径等级加入积分参数    配置修正

--- a/zyx-dubbo-venue/src/main/resources/service.properties
+++ b/zyx-dubbo-venue/src/main/resources/service.properties
@@ -11,26 +11,12 @@ jdbc.minIdle=5
 jdbc.maxActive=20
 
 ######################### Redis settings ########################
-#redis.host=192.168.1.200
-#redis.port=6379
-#redis.pass=
-#redis.default.db=0
-#redis.timeout=100000
-#redis.maxTotal=300
-#redis.maxIdle=100
-#redis.maxWaitMillis=1000
-#redis.testOnBorrow=true
-
-########################## SMS Settings #####################
-#sms.id=995836
-#sms.account=admin
-#sms.password=1JKY7K
-#sms.sendType=1
-#sms.PostFixNumber=
-
-######################## CLMSG Settings ########################
-CLMSG.URL=http://sapi.253.com/msg/HttpBatchSendSM
-CLMSG.ACCOUNT=CDzyx888
-CLMSG.PSWD=CDZYX_2016
-CLMSG.NEEDSTATUS=true
-CLMSG.EXTNO=null
+redis.host=192.168.1.200
+redis.port=6379
+redis.pass=
+redis.default.db=0
+redis.timeout=100000
+redis.maxTotal=300
+redis.maxIdle=100
+redis.maxWaitMillis=1000
+redis.testOnBorrow=true
