--- a/zyx-dubbo-activity/src/main/resources/service.properties
+++ b/zyx-dubbo-activity/src/main/resources/service.properties
@@ -12,8 +12,8 @@ jdbc.maxActive=20
 
 ######################### Redis settings ########################
 redis.host=192.168.1.200
-redis.port=6379
-redis.pass=
+redis.port=16379
+redis.pass=tiyujia_2016
 redis.default.db=0
 redis.timeout=100000
 redis.maxTotal=300
